--- a/.github/workflows/upload_to_s3.yaml
+++ b/.github/workflows/upload_to_s3.yaml
@@ -99,13 +99,12 @@ jobs:
                       --query "Credentials.[AccessKeyId,SecretAccessKey,SessionToken]" \
                       --output text))
       - name: Upload plugin to s3 apps
-        if: ${{ inputs.kind }} == 'plugin'
+        if: ${{ inputs.kind == 'plugin' }}
         run: |
           # plugin name
-          echo ${{ inputs.kind }}
           prefix="@playkit-js/playkit-js-"
           packageName=$(npx -c 'echo "$npm_package_name"')
-          pluginName="playkit-airplay"
+          pluginName="playkit-${packageName#$prefix}"
           echo "Plugin name $pluginName"
 
           # version
@@ -114,12 +113,15 @@ jobs:
           newVersion="${currentVersion}-${sha}"
           echo "New version ${newVersion}"
 
-          s3Path="s3://${{ matrix.env }}-${{ secrets.S3_BUCKET_APPS }}/bundler/playkit/modules/${pluginName}"
+          s3Path="s3://${{ matrix.env }}-${{ secrets.S3_BUCKET_APPS }}/bundler/playkit/modules/${pluginName}/${newVersion}"
+          aws s3 cp dist/ ${s3Path} --recursive --exclude "*" --include "${pluginName}.js*"
           aws s3 ls ${s3Path}
-          aws s3 ls ${s3Path}/1.1.1/
-
+          if [ -d 'translations' ]; then
+            aws s3 cp translations/ ${s3Path}/translations/ --recursive --include "*"
+            aws s3 ls ${s3Path}/translations/
+          fi
       - name: Upload player to s3 apps
-        if: ${{ inputs.kind }} == 'player'
+        if: ${{ inputs.kind == 'player' }}
         run: |
           # version
           sha=$(echo "${GITHUB_SHA::7}")
@@ -127,9 +129,15 @@ jobs:
           newVersion="${currentVersion}-${sha}"
           echo "New version ${newVersion}"
 
-          s3Path="s3://${{ matrix.env }}-${{ secrets.S3_BUCKET_APPS }}/bundler/playkit/modules"
-          aws s3 ls ${s3Path}
-
+          for player in $PLAYERS; do
+            s3Path="s3://${{ matrix.env }}-${{ secrets.S3_BUCKET_APPS }}/bundler/playkit/modules/kaltura-${player}-player/${newVersion}"
+            aws s3 cp dist/ ${s3Path} --recursive --exclude "*" --include "kaltura-${player}-player.js*"
+            aws s3 ls ${s3Path}/
+            if [ -d 'translations' ]; then
+              aws s3 cp translations/ ${s3Path}/translations --recursive --include "*"
+              aws s3 ls ${s3Path}/translations/
+            fi
+          done
 
 
 
