--- a/.github/workflows/upload_to_s3.yaml
+++ b/.github/workflows/upload_to_s3.yaml
@@ -89,8 +89,10 @@ jobs:
         run: |
           region=$(echo '${{ steps.specific_account.outputs.specific_account }}' | jq -r '.region')
           echo "region=$region" >> $GITHUB_OUTPUT
-      - name: Assume role
+      - name: Upload plugin to s3 apps
+        if: ${{ inputs.kind == 'plugin' }}
         run: |
+          # Assume role
           export $(printf "AWS_ACCESS_KEY_ID=%s AWS_SECRET_ACCESS_KEY=%s AWS_SESSION_TOKEN=%s" \
                       $(aws sts assume-role \
                       --role-arn arn:aws:iam::${{ steps.account_id.outputs.account_id }}:role/${{ matrix.env }}-kalt-ovp-apps-role \
@@ -98,10 +100,7 @@ jobs:
                       --region ${{ steps.region.outputs.region }} \
                       --query "Credentials.[AccessKeyId,SecretAccessKey,SessionToken]" \
                       --output text))
-          aws sts get-caller-identity
-      - name: Upload plugin to s3 apps
-        if: ${{ inputs.kind == 'plugin' }}
-        run: |
+
           # plugin name
           prefix="@playkit-js/playkit-js-"
           packageName=$(npx -c 'echo "$npm_package_name"')
@@ -125,13 +124,22 @@ jobs:
       - name: Upload player to s3 apps
         if: ${{ inputs.kind == 'player' }}
         run: |
+          # Assume role
+          export $(printf "AWS_ACCESS_KEY_ID=%s AWS_SECRET_ACCESS_KEY=%s AWS_SESSION_TOKEN=%s" \
+                      $(aws sts assume-role \
+                      --role-arn arn:aws:iam::${{ steps.account_id.outputs.account_id }}:role/${{ matrix.env }}-kalt-ovp-apps-role \
+                      --role-session-name ${{ matrix.env }} \
+                      --region ${{ steps.region.outputs.region }} \
+                      --query "Credentials.[AccessKeyId,SecretAccessKey,SessionToken]" \
+                      --output text))
+
           # version
           sha=$(echo "${GITHUB_SHA::7}")
           currentVersion=$(npx -c 'echo "$npm_package_version"')
           newVersion="${currentVersion}-${sha}"
           echo "New version ${newVersion}"
 
-          for player in $PLAYERS; do
+          for player in ${{ env.PLAYERS }}; do
             s3Path="s3://${{ matrix.env }}-${{ secrets.S3_BUCKET_APPS }}/bundler/playkit/modules/kaltura-${player}-player/${newVersion}"
             aws s3 cp dist/ ${s3Path}/ --recursive --exclude "*" --include "kaltura-${player}-player.js*"
             aws s3 ls ${s3Path}/
