test all the flow

--- a/.github/workflows/upload_to_s3.yaml
+++ b/.github/workflows/upload_to_s3.yaml
@@ -1,4 +1,6 @@
-name: Upload to s3
+name: Upload to s3 QA and Dev
+run-name: Upload to s3 QA and Dev by @${{ github.actor }}
+
 on:
   workflow_call:
     secrets:
@@ -113,7 +115,6 @@ jobs:
           newVersion="${currentVersion}-${sha}"
           echo "New version ${newVersion}"
 
-          aws sts get-caller-identity
           s3Path="s3://${{ matrix.env }}-${{ secrets.S3_BUCKET_APPS }}/bundler/playkit/modules/${pluginName}/${newVersion}"
           aws s3 cp dist/ ${s3Path}/ --recursive --exclude "*" --include "${pluginName}.js*"
           aws s3 ls ${s3Path}/
@@ -121,7 +122,7 @@ jobs:
             aws s3 cp translations/ ${s3Path}/translations/ --recursive --include "*"
             aws s3 ls ${s3Path}/translations/
           fi
-      - name: Upload player to s3 apps
+      - name: Upload player to s3 apps by assuming role
         if: ${{ inputs.kind == 'player' }}
         run: |
           # Assume role
