--- a/.github/workflows/upload_packages_npm_run.yaml
+++ b/.github/workflows/upload_packages_npm_run.yaml
@@ -8,8 +8,8 @@ on:
       - devops-pr
 
 jobs:
-  release-version-qa:
-    uses: kaltura/playkit-js-youbora/.github/workflows/upload_packages_npm.yaml@devops-tests
+  upload-packages-to-npm:
+    uses: ./.github/workflows/upload_packages_npm.yaml
     secrets:
       NPM_JFROG_USER: ${{ secrets.NPM_JFROG_USER }}
       NPM_JFROG_PASS: ${{ secrets.NPM_JFROG_PASS }}
