--- a/.github/workflows/upload_to_s3_run.yaml
+++ b/.github/workflows/upload_to_s3_run.yaml
@@ -9,13 +9,14 @@ on:
 
 jobs:
   upload-to-s3-qa-and-dev:
-    uses: ./.github/workflows/upload_to_s3.yaml
-    secrets:
-      CENTRAL_ACCOUNT_ID: ${{ secrets.CENTRAL_ACCOUNT_ID }}
-      S3_BUCKET_APPS: ${{ secrets.S3_BUCKET_APPS }}
-    with:
-      aws-secret-central: '"dor-test-github-actions"'
-      kind: "plugin"
+    - uses: actions/checkout@v3
+    - uses: ./.github/workflows/upload_to_s3.yaml
+      secrets:
+        CENTRAL_ACCOUNT_ID: ${{ secrets.CENTRAL_ACCOUNT_ID }}
+        S3_BUCKET_APPS: ${{ secrets.S3_BUCKET_APPS }}
+      with:
+        aws-secret-central: '"dor-test-github-actions"'
+        kind: "plugin"
 
 
 
