--- a/.github/workflows/upload_packages_npm_run.yaml
+++ b/.github/workflows/upload_packages_npm_run.yaml
@@ -9,12 +9,13 @@ on:
 
 jobs:
   upload-packages-to-npm:
-    - uses: actions/checkout@v3
-    - uses: ./.github/workflows/upload_packages_npm.yaml
-      secrets:
-        NPM_JFROG_USER: ${{ secrets.NPM_JFROG_USER }}
-        NPM_JFROG_PASS: ${{ secrets.NPM_JFROG_PASS }}
-      with:
-        yarn-run-to-execute: '"release"'
-        npm-registry-url: 'https://kalturaa.jfrog.io/artifactory/api/npm/dor-test-nodejs-virtual/'
+    steps:
+      - uses: actions/checkout@v3
+      - uses: ./.github/workflows/upload_packages_npm.yaml
+        secrets:
+          NPM_JFROG_USER: ${{ secrets.NPM_JFROG_USER }}
+          NPM_JFROG_PASS: ${{ secrets.NPM_JFROG_PASS }}
+        with:
+          yarn-run-to-execute: '"release"'
+          npm-registry-url: 'https://kalturaa.jfrog.io/artifactory/api/npm/dor-test-nodejs-virtual/'
 
