--- a/.github/workflows/upload_to_s3_run.yaml
+++ b/.github/workflows/upload_to_s3_run.yaml
@@ -9,15 +9,13 @@ on:
 
 jobs:
   upload-to-s3-qa-and-dev:
-    steps:
-      - uses: actions/checkout@v3
-      - uses: ./.github/workflows/upload_to_s3.yaml
-        secrets:
-          CENTRAL_ACCOUNT_ID: ${{ secrets.CENTRAL_ACCOUNT_ID }}
-          S3_BUCKET_APPS: ${{ secrets.S3_BUCKET_APPS }}
-        with:
-          aws-secret-central: '"dor-test-github-actions"'
-          kind: "plugin"
+    uses: kaltura/playkit-js-youbora/.github/workflows/upload_to_s3.yaml@devops-tests
+    secrets:
+      CENTRAL_ACCOUNT_ID: ${{ secrets.CENTRAL_ACCOUNT_ID }}
+      S3_BUCKET_APPS: ${{ secrets.S3_BUCKET_APPS }}
+    with:
+      aws-secret-central: '"dor-test-github-actions"'
+      kind: "plugin"
 
 
 
