test all the flow

--- a/.github/workflows/upload_packages_npm_run.yaml
+++ b/.github/workflows/upload_packages_npm_run.yaml
@@ -3,7 +3,7 @@ name: Upload packages to NPM
 run-name: Upload packages to NPM by @${{ github.actor }}
 
 on:
-  pull_request:
+  push:
     branches:
       - devops-pr
 
