--- a/.github/workflows/upload_to_s3_run.yaml
+++ b/.github/workflows/upload_to_s3_run.yaml
@@ -3,7 +3,7 @@ name: Upload to s3 QA and Dev
 run-name: Upload to s3 QA and Dev by @${{ github.actor }}
 
 on:
-  pull_request:
+  push:
     branches:
       - devops-pr
 
