test all the flow

--- a/.github/workflows/upload_packages_npm_run.yaml
+++ b/.github/workflows/upload_packages_npm_run.yaml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   upload-packages-to-npm:
-    uses: kaltura/playkit-js-youbora/.github/workflows/upload_packages_npm.yaml@devops-tests
+    uses: ./.github/workflows/upload_packages_npm.yaml
     secrets:
       NPM_JFROG_USER: ${{ secrets.NPM_JFROG_USER }}
       NPM_JFROG_PASS: ${{ secrets.NPM_JFROG_PASS }}
