add yarn upgrade capability

--- a/.github/workflows/player_tests.yaml
+++ b/.github/workflows/player_tests.yaml
@@ -6,7 +6,7 @@ on:
     inputs:
       yarn-upgrade-list:
         description: "list of packages to overwrite in package.json - example: 'playkit-js/playkit-js@canary @playkit-js/playkit-js-dash@canary'"
-        required: flase
+        required: false
         type: string
       yarn-run-to-execute:
         description: "list of package.json scripts - example: 'eslint flow test'"
