check the test workflow

--- a/.github/workflows/tests_run.yaml
+++ b/.github/workflows/tests_run.yaml
@@ -9,8 +9,8 @@ on:
 
 jobs:
   running-tests:
-    uses: kaltura/playkit-js-youbora/.github/workflows/player_tests.yaml@devops-tests
+    uses: ./.github/workflows/tests.yaml
     with:
-      yarn-run-to-execute: 'eslint flow'
+      yarn-run-to-execute: 'eslint flow test'
 
 
