check the test workflow

--- a/.github/workflows/tests_run.yaml
+++ b/.github/workflows/tests_run.yaml
@@ -11,6 +11,6 @@ jobs:
   running-tests:
     uses: ./.github/workflows/tests.yaml
     with:
-      yarn-run-to-execute: 'eslint flow test'
+      yarn-run-to-execute: 'eslint flow'
 
 
