--- a/.github/workflows/tests_run.yaml
+++ b/.github/workflows/tests_run.yaml
@@ -1,6 +1,6 @@
 ## CI - Player And Plugin Tests
 name: Player And Plugin Tests
-run-name: Player And Plugin Tests by
+run-name: Player And Plugin Tests
 
 on:
   pull_request:
