--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -1,5 +1,5 @@
 name: Player And Plugin Tests
-run-name: Player And Plugin Tests by @${{ github.actor }}
+run-name: Player And Plugin Tests
 
 on:
   workflow_call:
