--- a/.github/workflows/tests_run.yaml
+++ b/.github/workflows/tests_run.yaml
@@ -1,6 +1,6 @@
 ## CI - Player And Plugin Tests
 name: Player And Plugin Tests
-run-name: Player And Plugin Tests by @${{ github.actor }}
+run-name: Player And Plugin Tests
 
 on:
   pull_request:
@@ -9,7 +9,7 @@ on:
 
 jobs:
   running-tests:
-    uses: kaltura/playkit-js-youbora/.github/workflows/player_tests.yaml@devops-tests
+    uses: ./.github/workflows/tests.yaml
     with:
       yarn-run-to-execute: 'eslint flow'
 
