--- a/.github/workflows/upload_packages_run.yaml
+++ b/.github/workflows/upload_packages_run.yaml
@@ -28,5 +28,6 @@ jobs:
       CENTRAL_ACCOUNT_ID: ${{ secrets.CENTRAL_ACCOUNT_ID }}
       S3_BUCKET_APPS: ${{ secrets.S3_BUCKET_APPS }}
     with:
+      yarn-run-to-execute: '"release"'
       aws-secret-central: '"dor-test-github-actions"'
       kind: "plugin"
