check full flow

--- a/.github/workflows/upload_to_s3.yaml
+++ b/.github/workflows/upload_to_s3.yaml
@@ -13,6 +13,10 @@ on:
         description: "list of packages to overwrite in package.json - example: 'playkit-js/playkit-js@canary @playkit-js/playkit-js-dash@canary'"
         required: false
         type: string
+      yarn-run-to-execute:
+        description: "list of package.json scripts - example: 'eslint flow test'"
+        required: true
+        type: string
       aws-secret-central:
         description: "secret in central that include all the account ids"
         required: true
