check full flow

--- a/.github/workflows/upload_to_npm.yaml
+++ b/.github/workflows/upload_to_npm.yaml
@@ -71,6 +71,10 @@ jobs:
           sed -iE "s/${currentVersion}/${newVersion}/g" CHANGELOG.md
           rm package.jsonE
           rm CHANGELOG.mdE
+      - name: Yarn run build
+        run: yarn run build
+        env:
+          NODE_OPTIONS: "--openssl-legacy-provider"
       - name: Yarn publish
         run: yarn publish
 
