--- a/.github/workflows/upload_to_s3.yaml
+++ b/.github/workflows/upload_to_s3.yaml
@@ -9,20 +9,24 @@ on:
       S3_BUCKET_APPS:
         required: true
     inputs:
-      yarn-upgrade-list:
-        description: "list of packages to overwrite in package.json - example: 'playkit-js/playkit-js@canary @playkit-js/playkit-js-dash@canary'"
-        required: false
-        type: string
-      yarn-run-to-execute:
-        description: "list of package.json scripts - example: 'eslint flow test'"
-        required: true
-        type: string
       aws-secret-central:
         description: "secret in central that include all the account ids"
         required: true
         type: string
       kind:
         description: "choose player or plugin - example: 'plugin'"
+        required: true
+        type: string
+      full-npm-name:
+        description: "name package with version example: '@playkit-js/xxx@xxx'"
+        required: true
+        type: string
+      version:
+        description: "name example: '@playkit-js/xxx@xxx'"
+        required: true
+        type: string
+      name:
+        description: "name package with version example: '@playkit-js/xxx@xxx'"
         required: true
         type: string
 
@@ -48,6 +52,7 @@ jobs:
           role-to-assume: arn:aws:iam::${{ secrets.CENTRAL_ACCOUNT_ID }}:role/dor-test-oidc-github-actions
           role-session-name: githubAction-${{ github.run_id }}
           aws-region: "us-east-1"
+
       - name: Get environments list
         id: accounts
         run: |
@@ -55,6 +60,7 @@ jobs:
           accounts=$(echo $aws_envs | jq -c '.[]' | while read i; do jq -n --arg env "$(jq -r '.env' <<< "$i")" '{"env": $env, "os": "ubuntu-latest", "node-version": "17.x"}' ; done | jq -s -c)
           echo $accounts
           echo "accounts={\"include\":$accounts}" >> $GITHUB_OUTPUT
+
   upload-to-s3:
     needs: get-accounts
     strategy:
@@ -64,47 +70,25 @@ jobs:
       id-token: write
       contents: read
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
       - name: Node.js version ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-      - name: Yarn upgrade ${{ inputs.yarn-upgrade-list }}
-        if: ${{ inputs.yarn-upgrade-list }}
+
+      - name: Download plugin package
+        if: ${{ inputs.kind == 'plugin' }}
         run: |
-          for command in ${{ inputs.yarn-upgrade-list }}; do
-            yarn upgrade $command
-          done
-      - name: Yarn install
-        run: yarn install
-      - name: Yarn run ${{ inputs.yarn-run-to-execute }}
-        run: |
-          git config --global user.email "ovp.cp@kaltura.com"
-          git config --global user.name "ovp-github-actions"
-          for command in ${{ inputs.yarn-run-to-execute }}; do
-            yarn run $command
-          done
-      - name: Update version in package.json file
-        run: |
-          sha=$(echo "${GITHUB_SHA::7}")
-          currentVersion=$(npx -c 'echo "$npm_package_version"')
-          newVersion="${currentVersion}-${sha}"
-          echo "New version ${newVersion}"
-          sed -iE "s/${currentVersion}/${newVersion}/g" package.json
-          sed -iE "s/${currentVersion}/${newVersion}/g" CHANGELOG.md
-          rm package.jsonE
-          rm CHANGELOG.mdE
-      - name: Yarn run build
-        run: yarn run build
-        env:
-          NODE_OPTIONS: "--openssl-legacy-provider"
+          download_url=$(yarn info --silent ${{ inputs.full-npm-name }} dist.tarball)
+          curl -L ${download_url} -o package.tgz
+          tar -xzf package.tgz
+
       - name: Configure aws credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
           role-to-assume: arn:aws:iam::${{ secrets.CENTRAL_ACCOUNT_ID }}:role/dor-test-oidc-github-actions
           role-session-name: githubAction
           aws-region: "us-east-1"
+
       - name: Get specific account details
         id: specific_account
         run: |
@@ -112,16 +96,19 @@ jobs:
           echo $aws_envs | jq -c '.[]' | while read i; do account_id=$(jq -r '.account_id' <<< "$i"); echo "::add-mask::$account_id"; done
           specific_account=$(echo $aws_envs | jq -c '.[] | select(.env | contains("${{ matrix.env }}"))')
           echo "specific_account=$specific_account" >> $GITHUB_OUTPUT
+
       - name: Get account id
         id: account_id
         run: |
           account_id=$(echo '${{ steps.specific_account.outputs.specific_account }}' | jq -r '.account_id')
           echo "account_id=$account_id" >> $GITHUB_OUTPUT
+
       - name: Get region
         id: region
         run: |
           region=$(echo '${{ steps.specific_account.outputs.specific_account }}' | jq -r '.region')
           echo "region=$region" >> $GITHUB_OUTPUT
+
       - name: Upload plugin to s3 apps
         if: ${{ inputs.kind == 'plugin' }}
         run: |
@@ -134,23 +121,14 @@ jobs:
                       --query "Credentials.[AccessKeyId,SecretAccessKey,SessionToken]" \
                       --output text))
 
-          # plugin name
-          prefix="@playkit-js/playkit-js-"
-          packageName=$(npx -c 'echo "$npm_package_name"')
-          pluginName="playkit-${packageName#$prefix}"
-          echo "Plugin name $pluginName"
-
-          # version
-          newVersion=$(npx -c 'echo "$npm_package_version"')
-          echo "New version ${newVersion}"
-
-          s3Path="s3://${{ matrix.env }}-${{ secrets.S3_BUCKET_APPS }}/bundler/playkit/modules/${pluginName}/${newVersion}"
-          aws s3 cp dist/ ${s3Path}/ --recursive --exclude "*" --include "${pluginName}.js*"
+          s3Path="s3://${{ matrix.env }}-${{ secrets.S3_BUCKET_APPS }}/bundler/playkit/modules/${{ inputs.name }}/${{ inputs.version }}"
+          aws s3 cp package/dist/ ${s3Path}/ --recursive --exclude "*" --include "${{ inputs.name }}.js*"
           aws s3 ls ${s3Path}/
           if [ -d 'translations' ]; then
             aws s3 cp translations/ ${s3Path}/translations/ --recursive --include "*"
             aws s3 ls ${s3Path}/translations/
           fi
+
       - name: Upload player to s3 apps by assuming role
         if: ${{ inputs.kind == 'player' }}
         run: |
@@ -163,19 +141,13 @@ jobs:
                       --query "Credentials.[AccessKeyId,SecretAccessKey,SessionToken]" \
                       --output text))
 
-          # version
-          newVersion=$(npx -c 'echo "$npm_package_version"')
-          echo "New version ${newVersion}"
-
           for player in ${{ env.PLAYERS }}; do
-            s3Path="s3://${{ matrix.env }}-${{ secrets.S3_BUCKET_APPS }}/bundler/playkit/modules/kaltura-${player}-player/${newVersion}"
-            aws s3 cp dist/ ${s3Path}/ --recursive --exclude "*" --include "kaltura-${player}-player.js*"
+            s3Path="s3://${{ matrix.env }}-${{ secrets.S3_BUCKET_APPS }}/bundler/playkit/modules/kaltura-${player}-player/${{ inputs.version }}"
+            aws s3 cp package/dist/ ${s3Path}/ --recursive --exclude "*" --include "kaltura-${player}-player.js*"
             aws s3 ls ${s3Path}/
             if [ -d 'translations' ]; then
               aws s3 cp translations/ ${s3Path}/translations --recursive --include "*"
               aws s3 ls ${s3Path}/translations/
             fi
           done
-
-
 
