update job name

--- a/.github/workflows/upload_to_npm.yaml
+++ b/.github/workflows/upload_to_npm.yaml
@@ -17,7 +17,7 @@ on:
         type: string
 
 jobs:
-  release-version-qa:
+  upload-to-npm:
     strategy:
       matrix:
         os: [ubuntu-latest]
