--- a/.github/draft_2/run_upload_packages.yaml
+++ b/.github/draft_2/run_upload_packages.yaml
@@ -3,7 +3,7 @@ name: Upload packages to NPM and S3
 run-name: Upload packages to NPM and S3
 
 on:
-  pull_request:
+  push:
     branches:
       - devops-pr
 
