--- a/.github/workflows/upload_to_s3.yaml
+++ b/.github/workflows/upload_to_s3.yaml
@@ -34,19 +34,12 @@ env:
   PLAYERS: "ovp tv"
 
 jobs:
-  upload-to-s3:
-    needs: get-accounts
-    strategy:
-      matrix: ${{fromJSON(needs.get-accounts.outputs.accounts)}}
-    runs-on: ${{ matrix.os }}
-    permissions:
-      id-token: write
-      contents: read
+  get-accounts:
+    runs-on: [ubuntu-latest]
     steps:
-      - name: Node.js version ${{ matrix.node-version }}
+      - name: Get environments list
         run: |
           echo "${{ inputs.version }}"
           echo "${{ inputs.name }}"
           echo "${{ inputs.full-npm-name }}"
-
 
