--- a/.github/workflows/run_upload_packages.yaml
+++ b/.github/workflows/run_upload_packages.yaml
@@ -3,7 +3,7 @@ name: Upload packages to NPM and S3
 run-name: Upload packages to NPM and S3
 
 on:
-  push:
+  pull_request:
     branches:
       - devops-pr
 
