--- a/.github/workflows/upload_to_s3.yaml
+++ b/.github/workflows/upload_to_s3.yaml
@@ -46,6 +46,9 @@ jobs:
           git config --global user.email "ovp.cp@kaltura.com"
           git config --global user.name "ovp-github-actions"
 
+      - name: Yarn install
+        run: yarn install
+
       - name: Yarn run release
         run: |
           if [ ${{ inputs.prod }} = "true" ]; then
