--- a/.github/workflows/upload_to_s3.yaml
+++ b/.github/workflows/upload_to_s3.yaml
@@ -33,9 +33,9 @@ jobs:
         node-version: [ 17.x ]
     runs-on: ${{ matrix.os }}
     outputs:
-      name: ${{ steps.accounts.outputs.name }}
-      version: ${{ steps.accounts.outputs.version }}
-      full_npm_name: ${{ steps.accounts.outputs.full_npm_name }}
+      name: ${{ steps.name.outputs.name }}
+      version: ${{ steps.version.outputs.version }}
+      full_npm_name: ${{ steps.full_npm_name.outputs.full_npm_name }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
