--- a/.github/workflows/upload_to_s3.yaml
+++ b/.github/workflows/upload_to_s3.yaml
@@ -17,20 +17,16 @@ on:
         description: "choose player or plugin - example: 'plugin'"
         required: true
         type: string
-      prod:
-        description: "prod or not boolean - example: 'false/true'"
-        required: true
-        type: string
       name:
-        description: "prod or not boolean - example: 'false/true'"
+        description: "name"
         required: true
         type: string
       version:
-        description: "prod or not boolean - example: 'false/true'"
+        description: "version"
         required: true
         type: string
       full-npm-name:
-        description: "prod or not boolean - example: 'false/true'"
+        description: "full-npm-name"
         required: true
         type: string
 
@@ -59,7 +55,7 @@ jobs:
       - name: Get environments list
         id: accounts
         run: |
-          aws_envs=$(aws secretsmanager get-secret-value --secret-id  arn:aws:secretsmanager:us-east-1:${{ secrets.CENTRAL_ACCOUNT_ID }}:secret:dor-test-github-actions-Q3jQq1 --query SecretString --output text | jq -c)
+          aws_envs=$(aws secretsmanager get-secret-value --secret-id  arn:aws:secretsmanager:us-east-1:${{ secrets.CENTRAL_ACCOUNT_ID }}:secret:${{ inputs.aws-secret-central }} --query SecretString --output text | jq -c)
           accounts=$(echo $aws_envs | jq -c '.[]' | while read i; do jq -n --arg env "$(jq -r '.env' <<< "$i")" '{"env": $env, "os": "ubuntu-latest", "node-version": "17.x"}' ; done | jq -s -c)
           echo $accounts
           echo "accounts={\"include\":$accounts}" >> $GITHUB_OUTPUT
@@ -79,9 +75,10 @@ jobs:
           node-version: ${{ matrix.node-version }}
 
       - name: Download plugin package
-        if: ${{ inputs.kind == 'plugin' }}
         run: |
-          echo "${{ inputs.full-npm-name }}"
+          download_url=$(yarn info --silent ${{ needs.get-package-details.outputs.full-npm-name }} dist.tarball)
+          curl -L ${download_url} -o package.tgz
+          tar -xzf package.tgz
 
       - name: Configure aws credentials
         uses: aws-actions/configure-aws-credentials@v1
@@ -123,7 +120,12 @@ jobs:
                       --output text))
 
           s3Path="s3://${{ matrix.env }}-${{ secrets.S3_BUCKET_APPS }}/bundler/playkit/modules/${{ inputs.name }}/${{ inputs.version }}"
-          echo "${s3Path}"
+          aws s3 cp package/dist/ ${s3Path}/ --recursive --exclude "*" --include "${{ inputs.name }}.js*"
+          aws s3 ls ${s3Path}/
+          if [ -d 'translations' ]; then
+            aws s3 cp translations/ ${s3Path}/translations/ --recursive --include "*"
+            aws s3 ls ${s3Path}/translations/
+          fi
 
       - name: Upload player to s3 apps by assuming role
         if: ${{ inputs.kind == 'player' }}
@@ -139,6 +141,11 @@ jobs:
 
           for player in ${{ env.PLAYERS }}; do
             s3Path="s3://${{ matrix.env }}-${{ secrets.S3_BUCKET_APPS }}/bundler/playkit/modules/kaltura-${player}-player/${{ inputs.version }}"
-            echo "${s3Path}"
+            aws s3 cp package/dist/ ${s3Path}/ --recursive --exclude "*" --include "kaltura-${player}-player.js*"
+            aws s3 ls ${s3Path}/
+            if [ -d 'translations' ]; then
+              aws s3 cp translations/ ${s3Path}/translations --recursive --include "*"
+              aws s3 ls ${s3Path}/translations/
+            fi
           done
 
